--- a/ris/ris/src/main/resources/application.properties
+++ b/ris/ris/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
