--- a/ris/ris/src/main/resources/application.properties
+++ b/ris/ris/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=/*yourmail*/
+spring.mail.password=/*yourpass*/
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
